# licensor-templates

./: 0bsd.jinja  README.md  agpl-3.0.jinja  bsd-1-clause.jinja  bsd-2-clause-patent.jinja  bsd-2-clause.jinja  bsd-3-clause-clear.jinja  bsd-3-clause.jinja  bsd-4-clause.jinja  cecill-2.1.jinja  gfdl-1.3.jinja  gpl-3.0.jinja  isc.jinja  licenses.yml  mit-0.jinja  mit.jinja  ncsa.jinja  ofl-1.1.jinja  postgresql.jinja  upl-1.0.jinja  vim.jinja  zlib.jinja
script/: README.md  pyproject.toml
script/src/licensator/: __init__.py  test.py
